--- a/paper/poster/sparsians-poster.tex
+++ b/paper/poster/sparsians-poster.tex
@@ -286,7 +286,7 @@ Sciences \url{makrai.marton@nytud.mta.hu} \and
     \end{block}
 
     \bigskip
-    \begin{block}{Feaures summarized}{ for query $q$ and its hypernym candidate $h$ }
+    \begin{block}{Features summarized}{ for query $q$ and its hypernym candidate $h$ }
       \begin{table}
         \begin{tabular}{lc}
           \toprule
