Replaces old font commands

--- a/paper/post_eval.tex
+++ b/paper/post_eval.tex
@@ -7,12 +7,12 @@
 	1A   &  13.3 &  28.1 &  21.3 &  13.8 &  12.6 &  12.3 \\
 	1A  &  19.8 &  36.1 &  29.7 &  21.1 &  19.0 &  18.3 \\
 	\midrule
-  1B   &  {\bf 12.5} &  24.2 &  14.5 &  {\bf 13.4} &  {\bf 12.5} &
-  {\bf 12.0} \\
-  1B  &  12.1 &            {\bf 25.1} &  {\bf 17.6} &  12.9 &  11.7 &  11.2 \\
+  1B   &  \textbf{12.5} &  24.2 &  14.5 &  \textbf{13.4} &  \textbf{12.5} &
+  \textbf{12.0} \\
+  1B  &  12.1 &            \textbf{25.1} &  \textbf{17.6} &  12.9 &  11.7 &  11.2 \\
 	\midrule
-  1C   &  {\bf 21.8} &  {\bf 43.8} &  {\bf 33.7} &  {\bf 22.9} &
-  {\bf 21.4} &  {\bf 19.9} \\
+  1C   &  \textbf{21.8} &  \textbf{43.8} &  \textbf{33.7} &  \textbf{22.9} &
+  \textbf{21.4} &  \textbf{19.9} \\
 	1C  &  20.0 &	28.3 &  21.4 &  20.9 &  21.0 &  19.4 \\
 	\midrule	
 	2A	 &  21.9 &  39.5 &  34.2 &  25.5 &  22.6 &  18.5 \\
