--- a/paper/ablation1A.tex
+++ b/paper/ablation1A.tex
@@ -13,9 +13,9 @@
     \toprule
 off & off & 10.3 & 21.3 & 15.0 & 10.6 & 10.1 & 9.6  \\
 off & on  & 10.1 & 21.1 & 14.9 & 10.5 & 9.9  & 9.5  \\
-    on  & off  & {\bf 12.1} & 25.4 & {\bf 18.9} & 12.9 & {\bf 11.6} & 10.9 \\
-    on  & on   & {\bf 12.1} & {\bf 25.3} & 18.7 & {\bf 13.0} &
-    {\bf 11.6} & {\bf 11.0} \\
+    on  & off  & \textbf{12.1} & 25.4 & \textbf{18.9} & 12.9 & \textbf{11.6} & 10.9 \\
+    on  & on   & \textbf{12.1} & \textbf{25.3} & 18.7 & \textbf{13.0} &
+    \textbf{11.6} & \textbf{11.0} \\
 \bottomrule
 	\end{tabular}
 	}
